test/corpus/advanced/advanced_channels.txt
==================
Channel factories
==================

numbers = Channel.of(1..10)
files = Channel.fromPath('data/*.txt')
pairs = Channel.fromFilePairs('data/*_{1,2}.fastq')
values = Channel.value('constant')

---

(source_file
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (binary_expression
          (integer_literal)
          (integer_literal)))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_content)))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_content)))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_content))))))

==================
Channel from operation
==================

Channel.from(1, 2, 3)

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (integer_literal)
        (integer_literal)
        (integer_literal)))))

==================
Channel value operation
==================

Channel.value('Hello')

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_content))))))

==================
Channel pipe operation
==================

Channel.from(1, 2, 3) | map { it * 2 }

---

(source_file
  (expression_statement
    (binary_expression
      (call_expression
        (member_expression
          (identifier)
          (identifier))
        (argument_list
          (integer_literal)
          (integer_literal)
          (integer_literal)))
      (call_expression
        (identifier)
        (closure
          (expression_statement
            (binary_expression
              (identifier)
              (integer_literal))))))))

==================
Channel of operation
==================

Channel.of('a', 'b', 'c')

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content))))))

==================
Channel with dynamic strings
==================

Channel.of("Hello ${name}", """Multi
line ${text}""")

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (string
          (string_content)
          (interpolation
            (identifier)))
        (string
          (string_content)
          (interpolation
            (identifier)))))))

==================
Channel with list input
==================

Channel.fromList(['a', 'b', 'c'])

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (list
          (string
            (string_content))
          (string
            (string_content))
          (string
            (string_content)))))))

==================
Channel with map input
==================

Channel.value([foo: 'bar', baz: 'qux'])

---

(source_file
  (expression_statement
    (call_expression
      (member_expression
        (identifier)
        (identifier))
      (argument_list
        (map
          (map_entry
            (identifier)
            (string
              (string_content)))
          (map_entry
            (identifier)
            (string
              (string_content))))))))

==================
Pipe to operator with arguments
==================

ch | ifEmpty(null)

---

(source_file
  (expression_statement
    (binary_expression
      (identifier)
      (call_expression
        (identifier)
        (argument_list
          (null_literal))))))

==================
Pipe to bare operator
==================

ch | view

---

(source_file
  (expression_statement
    (binary_expression
      (identifier)
      (identifier))))

==================
Method chain on process output channel
==================

workflow W {
  main:
  ch = A.out.db.join(B.out.x)
}

---

(source_file
  (workflow_definition
    (identifier)
    (main_section
      (assignment
        (identifier)
        (call_expression
          (member_expression
            (member_expression
              (member_expression
                (identifier)
                (identifier))
              (identifier))
            (identifier))
          (argument_list
            (member_expression
              (member_expression
                (identifier)
                (identifier))
              (identifier))))))))

==================
No-paren call with closure, map with computed key, pipe continuation
==================

def c = multiMapCriteria { m -> m }
x = [(key): v]

---

(source_file
  (variable_declaration
    (identifier)
    (call_expression
      (identifier)
      (closure
        (parameters
          (parameter
            (identifier)))
        (expression_statement
          (identifier)))))
  (assignment
    (identifier)
    (map
      (map_entry
        (parenthesized_expression
          (identifier))
        (identifier)))))

==================
Chained pipe operations
==================

x = a | map { it } | combine(b) | view

---

(source_file
  (assignment
    (identifier)
    (binary_expression
      (binary_expression
        (binary_expression
          (identifier)
          (call_expression
            (identifier)
            (closure
              (expression_statement
                (identifier)))))
        (call_expression
          (identifier)
          (argument_list
            (identifier))))
      (identifier))))
