test/corpus/advanced/advanced_process.txt
==================
When conditions
==================

process conditionalProcess {
    when:
    params.run_mode == 'full'

    input:
    val x

    script:
    """
    echo $x
    """
}

---

(source_file
  (process_definition
    (identifier)
    (when_section
      (binary_expression
        (member_expression
          (identifier)
          (identifier))
        (string
          (string_content))))
    (input_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (identifier)))))
    (script_section
      (expression_statement
        (string
          (string_content)
          (interpolation
            (identifier)))))))

==================
Each qualifiers
==================

process eachExample {
    input:
    each x
    each y

    script:
    """
    echo "$x$y"
    """
}

---

(source_file
  (process_definition
    (identifier)
    (input_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (identifier))))
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (identifier)))))
    (script_section
      (expression_statement
        (string
          (string_content)
          (string_content)
          (interpolation
            (identifier))
          (interpolation
            (identifier))
          (string_content))))))

==================
Dynamic directives
==================

process dynamicResources {
    cpus { task.attempt * 2 }
    memory { 6.GB * task.attempt }
    time { 1.hour * task.attempt }

    script:
    """
    echo "Using ${task.cpus} CPUs"
    """
}

---

(source_file
  (process_definition
    (identifier)
    (expression_statement
      (call_expression
        (identifier)
        (closure
          (expression_statement
            (binary_expression
              (member_expression
                (identifier)
                (identifier))
              (integer_literal))))))
    (expression_statement
      (call_expression
        (identifier)
        (closure
          (expression_statement
            (binary_expression
              (member_expression
                (integer_literal)
                (identifier))
              (member_expression
                (identifier)
                (identifier)))))))
    (expression_statement
      (call_expression
        (identifier)
        (closure
          (expression_statement
            (binary_expression
              (member_expression
                (integer_literal)
                (identifier))
              (member_expression
                (identifier)
                (identifier)))))))
    (script_section
      (expression_statement
        (string
          (string_content)
          (interpolation
            (member_expression
              (identifier)
              (identifier)))
          (string_content))))))
