test/corpus/advanced/advanced_strings.txt
==================
Complex string interpolation
==================

x = 10
y = "value"
result = "x is ${x > 5 ? 'big' : 'small'} and y is $y"
command = "samtools sort ${params.threads ? "-@ $params.threads" : ''} input.bam"

---

(source_file
  (assignment
    (identifier)
    (integer_literal))
  (assignment
    (identifier)
    (string
      (string_content)))
  (assignment
    (identifier)
    (string
      (string_content)
      (interpolation
        (ternary_expression
          (binary_expression
            (identifier)
            (integer_literal))
          (string
            (string_content))
          (string
            (string_content))))
      (string_content)
      (interpolation
        (identifier))))
  (assignment
    (identifier)
    (string
      (string_content)
      (interpolation
        (ternary_expression
          (member_expression
            (identifier)
            (identifier))
          (string
            (string_content)
            (interpolation
              (identifier)
              (identifier)))
          (string)))
      (string_content))))

==================
Multiline strings with indentation
==================

script = '''
    #!/bin/bash

    for i in {1..10}; do
        echo $i
    done
'''

query = """
    SELECT *
    FROM table
    WHERE id = ${params.id}
    AND status = 'active'
"""

---

(source_file
  (assignment
    (identifier)
    (string
      (string_content)))
  (assignment
    (identifier)
    (string
      (string_content)
      (interpolation
        (member_expression
          (identifier)
          (identifier)))
      (string_content))))

==================
Template strings
==================

template 'script.sh'

template """
    process \$name {
        input:
        val x

        script:
        \"\"\"
        echo \$x
        \"\"\"
    }
"""

---

(source_file
  (expression_statement
    (command_expression
      (identifier)
      (argument_list
        (string
          (string_content)))))
  (expression_statement
    (command_expression
      (identifier)
      (argument_list
        (string
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (string_content)
          (escape_sequence)
          (string_content)
          (escape_sequence)
          (escape_sequence)
          (escape_sequence)
          (string_content))))))

==================
Slashy string regex without interpolation
==================

def pattern = /\w+\.\d+/
def result = text =~ pattern

---

(source_file
  (variable_declaration
    (identifier)
    (slashy_string))
  (variable_declaration
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

==================
Double-slash inside a double-quoted string is content, not a comment
==================

def v = "sed 's/.\$//'"

---

(source_file
  (variable_declaration
    (identifier)
    (string
      (string_content)
      (escape_sequence)
      (string_content))))

==================
Method call on a triple-quoted string
==================

def m = """hi""".stripIndent()

---

(source_file
  (variable_declaration
    (identifier)
    (call_expression
      (member_expression
        (string
          (string_content))
        (identifier))
      (argument_list))))
