test/corpus/advanced/closures.txt
==================
Single parameter closure
==================

def square = { x -> x * x }
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (parameter
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier))))))

==================
Multiple parameter closure
==================

def add = { a, b -> a + b }
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (parameter
          (identifier))
        (parameter
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier))))))

==================
Multi-line closure with statements
==================

def process = { v ->
    println 'Hello!'
    println "Processing value"
    v * v
}
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (parameter
          (identifier)))
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (string
              (string_content)))))
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (string
              (string_content)))))
      (expression_statement
        (binary_expression
          (identifier)
          (identifier))))))

==================
Closure with variable declarations
==================

def compute = { x, y ->
    def result = x + y
    result * 2
}
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (parameter
          (identifier))
        (parameter
          (identifier)))
      (variable_declaration
        (identifier)
        (binary_expression
          (identifier)
          (identifier)))
      (expression_statement
        (binary_expression
          (identifier)
          (integer_literal))))))
