test/corpus/advanced/error_handling.txt
==================
Try catch blocks
==================

try {
    file = file('missing.txt')
} catch (Exception e) {
    println "File not found: ${e.message}"
} finally {
    println "cleanup"
}

---

(source_file
  (try_statement
    (block
      (assignment
        (identifier)
        (call_expression
          (identifier)
          (argument_list
            (string
              (string_content))))))
    (catch_clause
      (type
        (identifier))
      (identifier)
      (block
        (expression_statement
          (command_expression
            (identifier)
            (argument_list
              (string
                (string_content)
                (interpolation
                  (member_expression
                    (identifier)
                    (identifier)))))))))
    (finally_clause
      (block
        (expression_statement
          (command_expression
            (identifier)
            (argument_list
              (string
                (string_content)))))))))

==================
Process error handling
==================

process errorExample {
    errorStrategy 'retry'
    maxRetries 3

    input:
    val x

    script:
    """
    if [ \$x -lt 0 ]; then
        exit 1
    fi
    """
}

---

(source_file
  (process_definition
    (identifier)
    (expression_statement
      (command_expression
        (identifier)
        (argument_list
          (string
            (string_content)))))
    (expression_statement
      (command_expression
        (identifier)
        (argument_list
          (integer_literal))))
    (input_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (identifier)))))
    (script_section
      (expression_statement
        (string
          (string_content)
          (escape_sequence)
          (string_content))))))

==================
Error directives
==================

process withErrorDirectives {
    errorStrategy { task.exitStatus == 1 ? 'retry' : 'terminate' }
    maxErrors 5
    maxRetries 3

    script:
    """
    echo "doing work"
    """
}

---

(source_file
  (process_definition
    (identifier)
    (expression_statement
      (call_expression
        (identifier)
        (closure
          (expression_statement
            (ternary_expression
              (binary_expression
                (member_expression
                  (identifier)
                  (identifier))
                (integer_literal))
              (string
                (string_content))
              (string
                (string_content)))))))
    (expression_statement
      (command_expression
        (identifier)
        (argument_list
          (integer_literal))))
    (expression_statement
      (command_expression
        (identifier)
        (argument_list
          (integer_literal))))
    (script_section
      (expression_statement
        (string
          (string_content))))))

==================
Exit with code and message, env output with emit
==================

process P {
  output:
  env "VER", emit: v
  script:
  if (x) { exit 1, "no" }
  "y"
}

---

(source_file
  (process_definition
    (identifier)
    (output_section
      (expression_statement
        (command_expression
          (identifier)
          (argument_list
            (string
              (string_content))
            (named_argument
              (identifier)
              (identifier))))))
    (script_section
      (if_statement
        (identifier)
        (block
          (expression_statement
            (command_expression
              (identifier)
              (argument_list
                (integer_literal)
                (string
                  (string_content)))))))
      (expression_statement
        (string
          (string_content))))))

==================
Exit with parenthesised args
==================

if (x) { exit(1, "no") }

---

(source_file
  (if_statement
    (identifier)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (integer_literal)
            (string
              (string_content))))))))

==================
Try catch statement
==================

process P {
  script:
  try {
    x = 1
  } catch (Exception e) {
    y = 2
  }
  """cmd"""
}

---

(source_file
  (process_definition
    (identifier)
    (script_section
      (try_statement
        (block
          (assignment
            (identifier)
            (integer_literal)))
        (catch_clause
          (type
            (identifier))
          (identifier)
          (block
            (assignment
              (identifier)
              (integer_literal)))))
      (expression_statement
        (string
          (string_content))))))
