test/corpus/advanced/functions_and_methods.txt
==================
Function declarations
==================

def square(x) {
    return x * x
}

def greet(name, greeting = 'Hello') {
    return "$greeting, $name!"
}

---

(source_file
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier)))
    (block
      (return_statement
        (binary_expression
          (identifier)
          (identifier)))))
  (function_definition
    (identifier)
    (parameters
      (parameter
        (identifier))
      (parameter
        (identifier)
        (string
          (string_content))))
    (block
      (return_statement
        (string
          (interpolation
            (identifier))
          (string_content)
          (interpolation
            (identifier))
          (string_content))))))

==================
Method calls
==================

result = [1,2,3].collect { it * 2 }
filtered = [1,2,3,4].findAll { it % 2 == 0 }
joined = ['a','b','c'].join('-')
mapped = [1,2,3].collectEntries { [(it): it * 2] }

---

(source_file
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (list
          (integer_literal)
          (integer_literal)
          (integer_literal))
        (identifier))
      (closure
        (expression_statement
          (binary_expression
            (identifier)
            (integer_literal))))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (list
          (integer_literal)
          (integer_literal)
          (integer_literal)
          (integer_literal))
        (identifier))
      (closure
        (expression_statement
          (binary_expression
            (binary_expression
              (identifier)
              (integer_literal))
            (integer_literal))))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (list
          (string
            (string_content))
          (string
            (string_content))
          (string
            (string_content)))
        (identifier))
      (argument_list
        (string
          (string_content)))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (list
          (integer_literal)
          (integer_literal)
          (integer_literal))
        (identifier))
      (closure
        (expression_statement
          (map
            (map_entry
              (parenthesized_expression
                (identifier))
              (binary_expression
                (identifier)
                (integer_literal)))))))))

==================
Complex closures
==================

transform = { x, y ->
    def result = x * y
    return result > 10 ? result : 0
}

numbers = [1,2,3,4]
    .collect { it * 2 }
    .findAll { it > 4 }
    .each { println it }

---

(source_file
  (assignment
    (identifier)
    (closure
      (parameters
        (parameter
          (identifier))
        (parameter
          (identifier)))
      (variable_declaration
        (identifier)
        (binary_expression
          (identifier)
          (identifier)))
      (return_statement
        (ternary_expression
          (binary_expression
            (identifier)
            (integer_literal))
          (identifier)
          (integer_literal)))))
  (assignment
    (identifier)
    (call_expression
      (member_expression
        (call_expression
          (member_expression
            (call_expression
              (member_expression
                (list
                  (integer_literal)
                  (integer_literal)
                  (integer_literal)
                  (integer_literal))
                (identifier))
              (closure
                (expression_statement
                  (binary_expression
                    (identifier)
                    (integer_literal)))))
            (identifier))
          (closure
            (expression_statement
              (binary_expression
                (identifier)
                (integer_literal)))))
        (identifier))
      (closure
        (expression_statement
          (command_expression
            (identifier)
            (argument_list
              (identifier))))))))
